--- a/web/app/src/css/main.css
+++ b/web/app/src/css/main.css
@@ -83,6 +83,7 @@ textarea {
 .mgl70{margin-left: 70px;}
 
 .pdt10{ padding-top:10px;}
+.pdt7{ padding-top: 7px;}
 .pd15{ padding:15px;}
 .pd5{ padding:5px !important;}
 .pdr50{ padding-right:50px;}
