--- a/web/app/views/setting/auditAnalyModal.html
+++ b/web/app/views/setting/auditAnalyModal.html
@@ -12,5 +12,5 @@
     <div class="alert alert-success text-center" role="alert" ng-show="successMsg!='' && errorMsg==''">
         {{successMsg}}
     </div>
-    <button class="btn btn-primary btn-md" aria-hidden="true" data-dismiss="modal" >关 闭</button>
+    <button class="btn btn-warning btn-md" aria-hidden="true" data-dismiss="modal" >关 闭</button>
 </div>
