--- a/web/app/views/setting/index.html
+++ b/web/app/views/setting/index.html
@@ -5,19 +5,19 @@
             <!-- modal b -->
             <!--用户添加-->
             <div id="J_userAddModal" class="modal fade" role="dialog" aria-hidden="true" >
-                <div class="modal-dialog modal-md">
+                <div class="modal-dialog modal-lg">
                     <div class="modal-content" ng-include="'views/setting/userAddModal.html'"></div>
                 </div>
             </div>
-            <!--用户删除-->
+            <!--警告提示-->
             <div id="J_userOprConfirm" class="modal fade" role="dialog" aria-hidden="true">
                 <div class="modal-dialog modal-sm">
-                    <div class="modal-content" ng-include="'views/setting/deleteModal.html'"></div>
+                    <div class="modal-content" ng-include="'views/setting/warningModal.html'"></div>
                 </div>
             </div>
             <!--重置密码-->
             <div id="J_userHashModal" class="modal fade" role="dialog" aria-hidden="true">
-                <div class="modal-dialog modal-sm modal-sm-ex">
+                <div class="modal-dialog modal-md">
                     <div class="modal-content" ng-include="'views/setting/userPwdModal.html'"></div>
                 </div>
             </div>
@@ -32,13 +32,6 @@
             <div id="J_auditAnalyConfirm" class="modal fade" role="dialog" aria-hidden="true">
                 <div class="modal-dialog modal-sm">
                     <div class="modal-content" ng-include="'views/setting/auditAnalyModal.html'">
-                    </div>
-                </div>
-            </div>
-            <!--审核管理-->
-            <div id="J_oprConfirm" class="modal fade" role="dialog" aria-hidden="true">
-                <div class="modal-dialog modal-sm">
-                    <div class="modal-content">
                     </div>
                 </div>
             </div>
