--- a/web/app/views/setting/userPwdModal.html
+++ b/web/app/views/setting/userPwdModal.html
@@ -37,6 +37,6 @@
 			{{successMsg}}
 		</div>
 	</div>
-    <!-- button class="btn btn-primary btn-md" data-text="取消" data-dismiss="modal" aria-hidden="true">取消</button> -->
-    <button class="btn btn-primary btn-md" data-text="确定" ng-click="modifyHash($event,'modal')">确定</button>
+    <button class="btn btn-info btn-md" data-text="确定" ng-click="modifyHash($event,'modal')">确定</button>
+    <button class="btn btn-warning btn-md" data-text="取消" data-dismiss="modal" aria-hidden="true">取消</button>
 </div>
