--- a/web/app/views/setting/warningModal.html
+++ b/web/app/views/setting/warningModal.html
@@ -14,6 +14,6 @@
 			{{successMsg}}
 		</div>
 	</div>
-	<button class="btn btn-primary btn-md" ng-click="confirmOpr()">确定</button>
-	<button class="btn btn-primary btn-md" ng-hide="oprType=='closeModal'" aria-hidden="true" data-dismiss="modal" >取消</button>
+	<button class="btn btn-info btn-md" ng-click="confirmOpr($event)">确定</button>
+	<button class="btn btn-warning btn-md" ng-hide="oprType=='closeModal'" aria-hidden="true" data-dismiss="modal" >取消</button>
 </div>
